# FoodRec-Agent

./: README.md  application.ipynb  pyproject.toml  requirements.txt
